fix(overflows): fix de l'overflow des favoris + inclusion du bouton d'ajout dans la div des favoris

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
 
 body {
     color: white;
+    overflow: hidden;
 }
 
 @theme {
